- added user authentication

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
 
+  google_sign_in: 3.0.4
+  firebase_auth: 0.5.11
+  cloud_firestore: 0.7.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
