--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,11 @@ flutter:
 
   assets:
     - res/bkg_onboarding.webp
+    - res/ic_fills.png
+    - res/ic_fills_active.png
+    - res/ic_maintenance.png
+    - res/ic_maintenance_active.png
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
